# cpp-on-avr

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  PreLoad.cmake  README.md  avr.cmake  build.sh  clang-tidy.sh  cpp-on-avr.code-workspace  docker-compose.yml  flash.bat  packages.txt  skip.list  static-analysis.sh  toolchain.cmake
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
Inc/: led.h  led.hpp  low_power.h  low_power.hpp  main.h  main.hpp  pinmap.hpp  superloop.h  superloop.hpp  testable_mcu_registers.hpp  timer.h  timer.hpp  utils.hpp
Src/: CMakeLists.txt  led.cpp  low_power.cpp  main.cpp  superloop.cpp  timer.cpp
